--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <h1>Simple Calculator</h1>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Calculator</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </nav>
